oxiplate-derive/tests/broken/invalid-statement.stderr
error: Expected one of: block, endblock, if, elseif, else, endif, for, continue, break, endfor, match, case, endmatch, let
 --> tests/broken/invalid-statement.rs:4:23
  |
4 | #[oxiplate_inline("{% thisdoesntexist %}")]
  |                       ^^^^^^^^^^^^^^^^^^
